GPC/tests/examples/fail/errArith7.gpc

void errArith7() {
    return 3 << 3.0;
}


